--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <version>6.0.5</version>
         </dependency>
         <!-- other biojava modules as needed -->
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.8.0</version>
+        </dependency>
     </dependencies>
 
 </project>
